# email-assistant-agent

./: .env.example  README.md  STRUCTURE.md  langgraph.json  main.py  pyproject.toml  pytest.ini  test_hitl.py
email_assistant/: __init__.py  agent.py
email_assistant/helpers/: __init__.py  tools_formatter.py
email_assistant/nodes/: __init__.py  agent_node.py  routing.py  tool_node.py  triage_router.py
email_assistant/prompts/: __init__.py  agent_prompts.py  defaults.py
email_assistant/scripts/: run_tests.sh
email_assistant/tests/: __init__.py  conftest.py  test_agent.py  test_data.py  test_triage.py  utils.py
email_assistant/tools/: __init__.py  calendar_tools.py  email_tools.py
email_assistant/utils/: __init__.py  helpers.py  nodes.py  prompts.py  router.py  state.py  tools.py
email_assistant_hitl/: README.md  __init__.py  agent.py  test_hitl.py
email_assistant_hitl/helpers/: __init__.py  email_formatter.py  email_parser.py  hitl_helpers.py
email_assistant_hitl/nodes/: __init__.py  action_handler_hitl.py  agent_node_hitl.py  interrupt_handler.py  notify_handler_hitl.py  triage_interrupt_handler.py  triage_router.py
email_assistant_hitl/prompts/: __init__.py  agent_prompts.py  defaults.py  triage_prompts.py
email_assistant_hitl/tools/: __init__.py  calendar_tools.py  email_tools.py  hitl_tools.py
email_assistant_hitl/utils/: __init__.py  memory.py  router.py  state.py
